--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Components/GenericListTable.razor
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Components/GenericListTable.razor
@@ -1,6 +1,6 @@
 ﻿@typeparam TItem
 
-<table class="table">
+<table style="display: block; height: 500px; overflow-y: scroll;" class="table table-striped table-bordered table-sm " cellspacing="0">
     <thead>
         <tr>@TableHeader</tr>
     </thead>
