--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/wwwroot/css/site.css
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/wwwroot/css/site.css
@@ -18,7 +18,7 @@ a, .btn-link {
     display: grid;
     grid-template-areas: "header" "content" "footer";
     grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: min-content 1fr min-content;
     grid-gap: 10px;
     height: 100vh;
 }
@@ -85,9 +85,9 @@ app {
 
 .results {
     display: grid;
-    grid-template-areas: "resultsleft" "resultscenter" "resultsright";
+    grid-template-areas: "resultsleft resultscenter resultsright" "footer footer footer";
     grid-template-columns: minmax(min-content, 1fr) 3fr minmax(min-content, 1fr);
-    grid-template-rows: auto;
+    grid-template-rows: 1fr min-content;
     grid-gap: 10px;
 }
 
@@ -101,4 +101,8 @@ app {
 
 .results-right {
     grid-area: resultsright;
+}
+
+.results-footer {
+    grid-area: footer;
 }
