Add IO Tests, Fix Site CSS, Create efficient calls in device code
After testing every device using multiple methods, I have come to the conclusion that there is a bottleneck.

All methods are very close with the SingleThreadBinaryChunkTest and BinaryChunkWriterTest coming in on average around 1450 datasets per second. The other tests are about 100 datasets behind. That speed difference isn't that great. Each dataset is 48 bytes so we are talking about around 4.8 KBps difference.

Multithreaded code in C++ is rated at around 2450 datasets per second with each dataset taking around 250 bytes. C++ is much faster, but still not fast enough as we require ~4000 datasets per second. Even when changing the size to around 180 bytes, the sample rate was essentially the same.

The next step is to create identical tests that run on a USB to see if there are improvements.

--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/wwwroot/css/site.css
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/wwwroot/css/site.css
@@ -83,26 +83,26 @@ app {
         top: 0.5rem;
     }
 
-.results {
+.subgrid {
     display: grid;
-    grid-template-areas: "resultsleft resultscenter resultsright" "footer footer footer";
+    grid-template-areas: "subgridleft subgridcenter subgridright" "footer footer footer";
     grid-template-columns: minmax(min-content, 1fr) 3fr minmax(min-content, 1fr);
     grid-template-rows: 1fr min-content;
     grid-gap: 10px;
 }
 
-.results-left {
-    grid-area: resultsleft;
+.subgrid-left {
+    grid-area: subgridleft;
 }
 
-.results-center {
-    grid-area: resultscenter;
+.subgrid-center {
+    grid-area: subgridcenter;
 }
 
-.results-right {
-    grid-area: resultsright;
+.subgrid-right {
+    grid-area: subgridright;
 }
 
-.results-footer {
+.subgrid-footer {
     grid-area: footer;
 }
