--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Experiment2020.razor
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Experiment2020.razor
@@ -16,8 +16,8 @@
 
 </div>
 
-<div class="results">
-    <div class="results-left">
+<div class="subgrid">
+    <div class="subgrid-left">
         <h5>Single data point testing</h5>
         <br />
         <button disabled="@isRunning" @onclick="GetResult" class="btn btn-primary">Get Data</button>
@@ -46,7 +46,7 @@
         </GenericListTable>
     </div>
 
-    <div class="results-center">
+    <div class="subgrid-center">
         <h5>Service call data block testing</h5>
         <br />
         <button disabled="@isRunning" @onclick="GetBulkResults" class="btn btn-primary">Gather all Async Data</button>
@@ -75,7 +75,7 @@
         </GenericListTable>
     </div>
 
-    <div class="results-right">
+    <div class="subgrid-right">
         <h5>Data stream testing</h5>
         <br />
         <button disabled="@isRunning" @onclick="GetStreamResults" class="btn btn-primary btn-sm">Stream Data</button>
@@ -105,7 +105,7 @@
         </GenericListTable>
     </div>
 
-    <div class="results-footer container-fluid p-3 my-3 bg-dark text-white">
+    <div class="subgrid-footer container-fluid p-3 my-3 bg-dark text-white">
         <h4 style="margin-bottom:10px;">Device Details</h4>
         <div class="card bg-secondary" style="max-width: 12%;margin-right:10px; float:left">
             <button @onclick="GetStatus" class="btn btn-sm btn-info">Verify Gyroscope Connection Status</button>
