Gyroscope single device code ready UNTESTED
GyroscopeOnly code created.

Gyroscope efficiency upgraded to accept spans rather than return spans.

BinaryChunkWriterTest updated to reflect upcoming port changes.

Acclerometer Channel values updated to reflect upcoming changes.

Fixed issue where important files would be inserted into the single file rather than exist within the directory.

--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Experiment2020.razor
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/Experiment2020.razor
@@ -250,7 +250,8 @@
 
             var result = await vibeClient.RunTimedProgramAsync(
                                 request,
-                                deadline: DateTime.UtcNow.AddMinutes(inputModel.Minutes + 1)); //Add padding to time to wait for I/O and other variables
+                                deadline: DateTime.UtcNow.AddMinutes(inputModel.Minutes + 1), //Add padding to time to wait for I/O and other variables
+                                cancellationToken: CancellationToken.Token);
 
             inputModel.SelectedPage = 1;
             inputModel.DataSets = result.DataSets;
