--- a/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/_Host.cshtml
+++ b/BlazorWebSpaceTool/BlazorWebSpaceTool/Pages/_Host.cshtml
@@ -34,7 +34,8 @@
     <script src="_framework/blazor.server.js"></script>
 
     @*Thanks to syncfusion's tutorial on serverside blazor file downloading
-        https://www.syncfusion.com/kb/10358/how-to-create-a-pdf-file-in-blazor-using-c*@
+        https://www.syncfusion.com/kb/10358/how-to-create-a-pdf-file-in-blazor-using-c
+        Alternative js code to view: https://stackoverflow.com/questions/13405129/javascript-create-and-save-file*@
     <script type="text/javascript">
         function saveAsFile(filename, bytesBase64) {
             if (navigator.msSaveBlob) {
